@@ -37,6 +37,7 @@ type Config struct {
 type FilebeatConfig struct {
 	Prospectors         []ProspectorConfig
 	SpoolSize           uint64 `yaml:"spool_size"`
+	PublishAsync        bool   `yaml:"publish_async"`
 	IdleTimeout         string `yaml:"idle_timeout"`
 	IdleTimeoutDuration time.Duration
 	RegistryFile        string `yaml:"registry_file"`
