@@ -19,12 +19,12 @@ func (p *syncPublisher) client() eventPublisher {
 	return p
 }
 
-func (p *syncPublisher) PublishEvent(ctx context, event common.MapStr) bool {
+func (p *syncPublisher) PublishEvent(ctx Context, event common.MapStr) bool {
 	msg := message{context: ctx, event: event}
 	return p.send(msg)
 }
 
-func (p *syncPublisher) PublishEvents(ctx context, events []common.MapStr) bool {
+func (p *syncPublisher) PublishEvents(ctx Context, events []common.MapStr) bool {
 	msg := message{context: ctx, events: events}
 	return p.send(msg)
 }
@@ -32,16 +32,16 @@ func (p *syncPublisher) PublishEvents(ctx context, events []common.MapStr) bool 
 func (p *syncPublisher) send(m message) bool {
 	if p.pub.disabled {
 		debug("publisher disabled")
-		outputs.SignalCompleted(m.context.signal)
+		outputs.SignalCompleted(m.context.Signal)
 		return true
 	}
 
-	signal := m.context.signal
+	signal := m.context.Signal
 	sync := outputs.NewSyncSignal()
 	if len(p.pub.Output) > 1 {
-		m.context.signal = outputs.NewSplitSignaler(sync, len(p.pub.Output))
+		m.context.Signal = outputs.NewSplitSignaler(sync, len(p.pub.Output))
 	} else {
-		m.context.signal = sync
+		m.context.Signal = sync
 	}
 
 	for _, o := range p.pub.Output {
